tests/typechecker/const-symbol-without-initializer.expect
tests/typechecker/const-symbol-without-initializer.prog:3:10: error: constant expression needs initializer