tests/typechecker/const-symbol-without-initializer.prog
main: proc() void
{
  #const a: i32;
}
